#communicate. First tryings after merge

--- a/public/templates/category.html
+++ b/public/templates/category.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="new_index.css">
+    <link rel="stylesheet" type="text/css" href="../styles/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Josefin+Slab&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>IU9-Forum</title>
@@ -62,7 +62,7 @@
                         cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
                         csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <div class="voteField">
-                        <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="reply.png" alt="#"/>
+                        <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="../images/reply.png" alt="#"/>
                         <div class="voteCounter colorMain colorTextLight">156</div>
                     </div>
                 </li>
@@ -85,7 +85,7 @@
                         cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
                         csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <div class="voteField">
-                        <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="reply.png" alt="#"/>
+                        <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="../images/reply.png" alt="#"/>
                         <div class="voteCounter colorMain colorTextLight">156</div>
                     </div>
                 </li>
@@ -108,7 +108,7 @@
                         cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
                         csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <div class="voteField">
-                        <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="reply.png" alt="#"/>
+                        <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="../images/reply.png" alt="#"/>
                         <div class="voteCounter colorMain colorTextLight">156</div>
                     </div>
                 </li>
@@ -131,7 +131,7 @@
                         cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
                         csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <div class="voteField">
-                        <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="reply.png" alt="#"/>
+                        <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="../images/reply.png" alt="#"/>
                         <div class="voteCounter colorMain colorTextLight">156</div>
                     </div>
                 </li>
@@ -154,7 +154,7 @@
                         cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
                         csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <div class="voteField">
-                        <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="reply.png" alt="#"/>
+                        <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="../images/reply.png" alt="#"/>
                         <div class="voteCounter colorMain colorTextLight">156</div>
                     </div>
                 </li>
@@ -177,7 +177,7 @@
                         cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
                         csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <div class="voteField">
-                        <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="reply.png" alt="#"/>
+                        <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="../images/reply.png" alt="#"/>
                         <div class="voteCounter colorMain colorTextLight">156</div>
                     </div>
                 </li>
@@ -191,7 +191,7 @@
                     <div class="link colorDarkLink colorTextLight" href="#">Nickname</div>
                 </div>
                 <textarea placeholder="Add new theme" name="myAnswer" class="myAnswer"></textarea>
-                <p><input class="myButton colorDarkLink colorSection" type="image" src="send.png" height="60"></p>
+                <p><input class="myButton colorDarkLink colorSection" type="image" src="../images/send.png" height="60"></p>
             </div>
         </div>
     </div>
