--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="new_index.css">
+    <link rel="stylesheet" type="text/css" href="../styles/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Josefin+Slab&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>IU9-Forum</title>
@@ -41,7 +41,7 @@
         </div>
 
         <div class="selectedTheme colorMain">
-            <input class="myButton colorDarkLink colorSection" type="image" src="back.png" height="60" style="float: left; margin-top: 4.4vh" onclick="history.back();">
+            <input class="myButton colorDarkLink colorSection" type="image" src="../images/back.png" height="60" style="float: left; margin-top: 4.4vh" onclick="history.back();">
             <div class="themeText colorTextLight">Text nkevbhebhewbhvibewibe ibnvnweovnjnw vjnej  v w v j e n e j v n w e j n
                 d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
                 d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
@@ -76,8 +76,8 @@
                         cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
                         csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <div class="voteField">
-                        <input type="image" class="vote" src="like.png" alt="#"/>
-                        <input type="image" class="vote" src="dislike.png" alt="#"/>
+                        <input type="image" class="vote" src="../images/like.png" alt="#"/>
+                        <input type="image" class="vote" src="../images/dislike.png" alt="#"/>
                         <div class="voteCounter colorMain colorTextLight">156</div>
                     </div>
                 </li>
@@ -100,8 +100,8 @@
                         cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
                         csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <div class="voteField">
-                        <input type="image" class="vote" src="like.png" alt="#"/>
-                        <input type="image" class="vote" src="dislike.png" alt="#"/>
+                        <input type="image" class="vote" src="../images/like.png" alt="#"/>
+                        <input type="image" class="vote" src="../images/dislike.png" alt="#"/>
                         <div class="voteCounter colorMain colorTextLight">156</div>
                     </div>
                 </li>
@@ -124,8 +124,8 @@
                         cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
                         csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <div class="voteField">
-                        <input type="image" class="vote" src="like.png" alt="#"/>
-                        <input type="image" class="vote" src="dislike.png" alt="#"/>
+                        <input type="image" class="vote" src="../images/like.png" alt="#"/>
+                        <input type="image" class="vote" src="../images/dislike.png" alt="#"/>
                         <div class="voteCounter colorMain colorTextLight">156</div>
                     </div>
                 </li>
@@ -148,8 +148,8 @@
                         cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
                         csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <div class="voteField">
-                        <input type="image" class="vote" src="like.png" alt="#"/>
-                        <input type="image" class="vote" src="dislike.png" alt="#"/>
+                        <input type="image" class="vote" src="../images/like.png" alt="#"/>
+                        <input type="image" class="vote" src="../images/dislike.png" alt="#"/>
                         <div class="voteCounter colorMain colorTextLight">156</div>
                     </div>
                 </li>
@@ -172,8 +172,8 @@
                         cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
                         csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <div class="voteField">
-                        <input type="image" class="vote" src="like.png" alt="#"/>
-                        <input type="image" class="vote" src="dislike.png" alt="#"/>
+                        <input type="image" class="vote" src="../images/like.png" alt="#"/>
+                        <input type="image" class="vote" src="../images/dislike.png" alt="#"/>
                         <div class="voteCounter colorMain colorTextLight">156</div>
                     </div>
                 </li>
@@ -186,7 +186,7 @@
                     <div class="link colorDarkLink colorTextLight" href="#">Nickname</div>
                 </div>
                 <textarea placeholder="Type here" name="myAnswer" class="myAnswer"></textarea>
-                <p><input class="myButton colorDarkLink colorSection" type="image" src="send.png" height="60"></p>
+                <p><input class="myButton colorDarkLink colorSection" type="image" src="../images/send.png" height="60"></p>
             </div>
         </div>
     </div>
