--- a/views/partials/categoriesListPanel.handlebars
+++ b/views/partials/categoriesListPanel.handlebars
@@ -1,6 +1,5 @@
-<h2>Категории</h2>
-<ul>
 {{#each categories}}
-  <li ><a href="/category/{{this.id}}">{{ this.name}}</a></li>
+    <li style="width: 84%; margin-bottom: 10%">
+        <a class="theme link colorDarkLink colorTextDark colorSection" href="http://www.yandex.ru">Sport</a>
+    </li>
 {{/each}}
-</ul>
