--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,14 +1,189 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="../public/styles/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Josefin+Slab&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/static/styles/index.css">>
-    <title>Title</title>
+    <title>IU9-Forum</title>
 </head>
-<body>
-{{{body}}}
+
+<body class="colorBackground colorTextDark">
+<div id="makeDark">
+    <div id="SignUpWindow" class="colorMain">
+        <div style="margin-bottom: 1%; margin-top: 1%" class="colorTextLight">Your account</div>
+        <input style="margin-top: 5%; font-size: 14pt" type="text" placeholder="Login"><br>
+        <input style="margin-top: 5%; font-size: 14pt" type="password" placeholder="Password">
+        <a href="#" type="button" class="close colorDarkLink colorBackground">Sign up</a>
+    </div>
+</div>
+
+<div class="header colorHeader">
+    <a style="float: left; margin: 1% 0 0 2%" class="link colorDarkLink colorTextLight" href="#">IU9-Forum</a>
+    <a style="float: right; margin: 1% 2% 0 0" class="link colorDarkLink colorTextLight" href="#makeDark">Sign Up</a>
+</div>
+
+<div class="container">
+    <div class="themes colorMain">
+        <h2 style="border-bottom-style:solid;" class="colorTextLight";>Categories</h2>
+        <ul style="list-style-type:none; max-height: 90%">
+            {{> categoriesListPanel}}
+        </ul>
+    </div>
+
+    <div class="selectedTheme colorMain">
+        <h2 class="colorTextLight" style="margin-left: 1%;">Category: SPORT</h2>
+        <ul style="max-height: 76%;">
+            <li class="answer colorSection">
+                <div class="profile">
+                    <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png" alt="No avatar" height="100" width="100">
+                    <div class="link colorDarkLink" href="#">Nickname</div>
+                </div>
+                <div class="answerText">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e
+
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsv
+                    vfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscaca
+                    cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
+                    csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
+                <div class="voteField">
+                    <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="../images/reply.png" alt="#"/>
+                    <div class="voteCounter colorMain colorTextLight">156</div>
+                </div>
+            </li>
+            <li class="answer colorSection">
+                <div class="profile">
+                    <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png" alt="No avatar" height="100" width="100">
+                    <div class="link colorDarkLink" href="#">Nickname</div>
+                </div>
+                <div class="answerText">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e
+
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsv
+                    vfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscaca
+                    cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
+                    csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
+                <div class="voteField">
+                    <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="../images/reply.png" alt="#"/>
+                    <div class="voteCounter colorMain colorTextLight">156</div>
+                </div>
+            </li>
+            <li class="answer colorSection">
+                <div class="profile">
+                    <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png" alt="No avatar" height="100" width="100">
+                    <div class="link colorDarkLink" href="#">Nickname</div>
+                </div>
+                <div class="answerText">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e
+
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsv
+                    vfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscaca
+                    cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
+                    csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
+                <div class="voteField">
+                    <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="../images/reply.png" alt="#"/>
+                    <div class="voteCounter colorMain colorTextLight">156</div>
+                </div>
+            </li>
+            <li class="answer colorSection">
+                <div class="profile">
+                    <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png" alt="No avatar" height="100" width="100">
+                    <div class="link colorDarkLink" href="#">Nickname</div>
+                </div>
+                <div class="answerText">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e
+
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsv
+                    vfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscaca
+                    cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
+                    csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
+                <div class="voteField">
+                    <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="../images/reply.png" alt="#"/>
+                    <div class="voteCounter colorMain colorTextLight">156</div>
+                </div>
+            </li>
+            <li class="answer colorSection">
+                <div class="profile">
+                    <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png" alt="No avatar" height="100" width="100">
+                    <div class="link colorDarkLink" href="#">Nickname</div>
+                </div>
+                <div class="answerText">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e
+
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsv
+                    vfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscaca
+                    cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
+                    csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
+                <div class="voteField">
+                    <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="../images/reply.png" alt="#"/>
+                    <div class="voteCounter colorMain colorTextLight">156</div>
+                </div>
+            </li>
+            <li class="answer colorSection">
+                <div class="profile">
+                    <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png" alt="No avatar" height="100" width="100">
+                    <div class="link colorDarkLink" href="#">Nickname</div>
+                </div>
+                <div class="answerText">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e
+
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                    e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsv
+                    vfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscaca
+                    cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
+                    csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
+                <div class="voteField">
+                    <input type="image" class="vote colorDarkLink myButton colorSection" style="width:90%; margin-left: 4%;" src="../images/reply.png" alt="#"/>
+                    <div class="voteCounter colorMain colorTextLight">156</div>
+                </div>
+            </li>
+
+
+        </ul>
+
+        <div class="newAnswer">
+            <div class="profile" style="margin-top: -2%; margin-left: 0%;">
+                <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png" alt="No avatar" height="100" width="100">
+                <div class="link colorDarkLink colorTextLight" href="#">Nickname</div>
+            </div>
+            <textarea placeholder="Add new theme" name="myAnswer" class="myAnswer"></textarea>
+            <p><input class="myButton colorDarkLink colorSection" type="image" src="../images/send.png" height="60"></p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
