index.html and category.html deleted, all code has been transited to handlebars files, style="" changed to css-classes

--- a/views/layouts/postViewLayout.handlebars
+++ b/views/layouts/postViewLayout.handlebars
@@ -1,6 +1,11 @@
 {{>head}}
 {{>topbar}}
-<h2>Просмотр поста</h2>
+<div class="container">
 
-{{>categoriesListPanel}}
-{{>postPanel}}
+    <div class="themes colorMain">
+        <h2 style="border-bottom-style:solid;" class="colorTextLight";>Categories</h2>
+        {{>categoriesListPanel}}
+    </div>
+
+    {{>postPanel}}
+</div>
