--- a/views/partials/categoriesListPanel.handlebars
+++ b/views/partials/categoriesListPanel.handlebars
@@ -1,6 +1,7 @@
-<h2>Категории</h2>
-{{#each categories}}
-    <li style="width: 84%; margin-bottom: 10%">
-        <a class="theme link colorDarkLink colorTextDark colorSection" href="/category/{{this.id}}">{{this.name}}</a>
-    </li>
-{{/each}}
+<ul class="ulCategories">
+    {{#each categories}}
+        <li class="theme link colorSection colorDarkLink">
+            <a class="theme link colorDarkLink colorTextDark colorSection" href="/category/{{this.id}}">{{this.name}}</a>
+        </li>
+    {{/each}}
+</ul>
