--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -17,6 +17,44 @@ ul {
     padding-left: 0.5%;
 }
 
+.ulPosts {
+    max-height: 73%;
+    min-height: 73%;
+}
+
+.ulCategories {
+    max-height: 80%;
+    list-style-type: none;
+}
+
+.headerText:first-child {
+    float: left;
+    margin: 1% 0 0 2%;
+}
+
+.headerText:last-child {
+    float: right;
+    margin: 1% 2% 0 0;
+}
+.replyImage {
+    width: 90%;
+    margin-left: 4%;
+    border-top-left-radius: 0;
+}
+
+.categoryHeader {
+    margin-left: 1%;
+}
+
+.myAvatar {
+    margin-left: 1%;
+}
+
+.category {
+    width: 84%;
+    margin-bottom: 10%;
+}
+
 .colorTextDark {
     color: #333333;
 }
@@ -45,13 +83,18 @@ ul {
 .colorHeader {
     background: #343338;
 }
-h1 {
-    color: red !important;
-}
+
 .myButton {
     margin-left: 1%;
     margin-right: 1%;
-    border-radius: 1vh;
+    border-bottom-left-radius: 1vh;
+    border-bottom-right-radius: 1vh;
+    margin-top: 15%;
+}
+
+.borderTop {
+    border-top-left-radius: 1vh;
+    border-top-right-radius: 1vh;
 }
 
 .close {
@@ -114,7 +157,6 @@ h1 {
 .answer {
     display: flex;
     width: 98%;
-    height: 50%;
     margin-bottom: 1%;
     padding: 1% 1% 1% 1%;
     border-radius: 1vh;
@@ -131,7 +173,7 @@ h1 {
     width: 80%;
     min-width: 80%;
     margin-left: 1%;
-    max-height: 1%;
+    margin-top: 1%;
     overflow-y: auto;
 }
 
@@ -150,9 +192,13 @@ h1 {
 }
 
 .profile {
-    margin: 1% 1% 1% 1%;
+    margin: 0% 1% 1% 1%;
     display: flex;
     flex-direction: column;
+}
+
+.profileName {
+    margin: 0 auto;
 }
 
 .vote {
@@ -167,9 +213,8 @@ h1 {
     text-align: center;
 }
 
-
 .newAnswer {
-    height: 12%;
+    height: 14%;
     padding: 0.2% 1% 1% 2%;
     display: flex;
     flex-direction: row;
@@ -180,9 +225,9 @@ h1 {
     resize: none;
     margin-left: 1%;
     margin-right: 1%;
-    margin-bottom: 1%;
+    margin-bottom: 0;
     width: 81%;
-    height: 97%;
+    height: 100%;
     font-size: 14pt;
     border-radius: 1vh;
 }
