--- a/views/layouts/postsListViewLayout.handlebars
+++ b/views/layouts/postsListViewLayout.handlebars
@@ -1,5 +1,12 @@
 {{>head}}
 {{>topbar}}
-<h1>Форум</h1>
-{{>categoriesListPanel}}
-{{>postsListPanel}}
+<div class="container">
+
+    <div class="themes colorMain">
+        <h2 style="border-bottom-style:solid;" class="colorTextLight";>Categories</h2>
+        {{>categoriesListPanel}}
+    </div>
+
+    {{>postsListPanel}}
+
+</div>
