--- a/views/partials/head.handlebars
+++ b/views/partials/head.handlebars
@@ -4,5 +4,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/static/styles/styles.css">
-    <title>postlist</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Josefin+Slab&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>IU9-Forum</title>
 </head>
