--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -8,6 +8,6 @@
 </div>
 
 <div class="header colorHeader">
-    <a style="float: left; margin: 1% 0 0 2%" class="link colorDarkLink colorTextLight" href="/">IU9-Forum</a>
-    <a style="float: right; margin: 1% 2% 0 0" class="link colorDarkLink colorTextLight" href="#makeDark">Sign Up</a>
+    <a class="headerText link colorDarkLink colorTextLight" href="/">IU9-Forum</a>
+    <a class="headerText link colorDarkLink colorTextLight" href="#makeDark">Sign Up</a>
 </div>
