index.html and category.html deleted, all code has been transited to handlebars files, style="" changed to css-classes

--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -11,7 +11,7 @@
             <div class="answerText">{{this.text}}</div>
             <div class="voteField">
                 <input type="image" class="vote" src="/static/images/like.png" alt="#"/>
-                <input type="image" class="vote" src=/static/images/dislike.png" alt="#"/>
+                <input type="image" class="vote" src="/static/images/dislike.png" alt="#"/>
                 <div class="voteCounter colorMain colorTextLight">156</div>
             </div>
         </li>
