Add processing new post and reply Closes: #6

--- a/views/partials/newAnswer.handlebars
+++ b/views/partials/newAnswer.handlebars
@@ -1,5 +1,10 @@
-<form action="" method="post">
-    <label>Ответ:</label><br>
-    <input type="text" name="answer" /><br><br>
-    <input type="submit" value="Отправить"/>
-</form>
+<div class="newAnswer">
+    <div class="profile" style="margin-top: -2%; margin-left: 0%;">
+        <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png" alt="No avatar" height="100" width="100">
+        <div class="link colorDarkLink colorTextLight" href="#">Nickname</div>
+    </div>
+    <form action="" method="post">
+        <textarea placeholder="Type here" name="myAnswer" class="myAnswer" required></textarea>
+        <p><input class="borderTop myButton colorDarkLink colorSection" type="image" src="/static/images/send.png" height="60"></p>
+    </form>
+</div>
