--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -18,12 +18,5 @@
         {{/each}}
     </ul>
 
-    <div class="newAnswer">
-        <div class="profile" style="margin-top: -2%; margin-left: 0%;">
-            <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png" alt="No avatar" height="100" width="100">
-            <div class="link colorDarkLink colorTextLight" href="#">Nickname</div>
-        </div>
-        <textarea placeholder="Type here" name="myAnswer" class="myAnswer"></textarea>
-        <p><input class="borderTop myButton colorDarkLink colorSection" type="image" src="/static/images/send.png" height="60"></p>
-    </div>
+    {{>newAnswer}}
 </div>
