'ind' (variable that shows if the post already exists redone

--- a/views/layouts/postsListViewLayout.handlebars
+++ b/views/layouts/postsListViewLayout.handlebars
@@ -1,7 +1,7 @@
 <script>
-    if({{ind}} == 1){
+    if(!{{postSuccess}})
         alert('Already exist!')
-    }
+
 </script>
 {{>head}}
 {{>topbar}}
