--- a/views/layouts/postViewLayout.handlebars
+++ b/views/layouts/postViewLayout.handlebars
@@ -3,7 +3,7 @@
 <div class="container">
 
     <div class="themes colorMain">
-        <h2 style="border-bottom-style:solid;" class="colorTextLight";>Categories</h2>
+        <h2 style="border-bottom-style:solid;" class="colorTextLight">Categories</h2>
         {{>categoriesListPanel}}
     </div>
 
