--- a/views/partials/newAnswer.handlebars
+++ b/views/partials/newAnswer.handlebars
@@ -3,8 +3,8 @@
         <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png" alt="No avatar" height="100" width="100">
         <div class="link colorDarkLink colorTextLight" href="#">Nickname</div>
     </div>
-    <form action="" method="post">
-        <textarea placeholder="Type here" name="myAnswer" class="myAnswer" required></textarea>
-        <p><input class="borderTop myButton colorDarkLink colorSection" type="image" src="/static/images/send.png" height="60"></p>
+    <form action="" method="post" id="answerForm">
+        <textarea placeholder="Ваш ответ" name="myAnswer" id="myAnswer" required></textarea>
+        <input id="postAnswerButton" class="borderTop myButton colorDarkLink colorSection" type="image" src="/static/images/send.png" height="60">
     </form>
 </div>
