--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -8,7 +8,7 @@
                 <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png" alt="No avatar" height="100" width="100">
                 <div class="link colorDarkLink" href="#">{{this.author_name}}</div>
             </div>
-            <div class="answerText">{{this.text}}</div>
+            <div class="answerText link ColorTextDark">{{this.text}}</div>
             <div class="voteField">
                 <input type="image" class="vote" src="/static/images/like.png" alt="#"/>
                 <input type="image" class="vote" src="/static/images/dislike.png" alt="#"/>
