--- a/views/partials/newPost.handlebars
+++ b/views/partials/newPost.handlebars
@@ -1,10 +1,12 @@
 <div class="newAnswer">
     <div class="myAvatar profile">
-        <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png" alt="No avatar" height="100" width="100">
+        <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png" alt="No avatar"
+             height="100" width="100">
         <div class="profileName link colorDarkLink colorTextLight" href="#">My_nickname</div>
     </div>
     <form action="" method="post" id="answerForm">
         <textarea placeholder="Создайте свой пост" name="myPost" id="myAnswer" required></textarea>
-        <input id="postAnswerButton" class="borderTop myButton colorDarkLink colorSection" type="image" src="/static/images/send.png">
+        <input id="postAnswerButton" class="borderTop myButton colorDarkLink colorSection" type="image"
+               src="/static/images/send.png">
     </form>
 </div>
