--- a/views/partials/categoriesListPanel.handlebars
+++ b/views/partials/categoriesListPanel.handlebars
@@ -1,7 +1,8 @@
+
 <ul class="ulCategories">
     {{#each categories}}
-        <li class="theme link colorSection colorDarkLink">
-            <a class="theme link colorDarkLink colorTextDark colorSection"
+        <li class="category colorSection colorDarkLink">
+            <a class="category-link colorTextDark"
                href="/category/{{this.id}}">{{this.name}}</a>
         </li>
     {{/each}}
