--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -1,4 +1,4 @@
-<div id="makeDark">
+<div id="makeDark" xmlns="http://www.w3.org/1999/html">
     <div id="SignUpWindow" class="colorMain">
         <div style="margin-bottom: 1%; margin-top: 1%" class="colorTextLight">Your account</div>
         <input style="margin-top: 5%; font-size: 14pt" type="text" placeholder="Login"><br>
@@ -7,7 +7,7 @@
     </div>
 </div>
 
-<div class="header colorHeader">
-    <a class="headerText link colorDarkLink colorTextLight" href="/">IU9-Forum</a>
-    <a class="headerText link colorDarkLink colorTextLight" href="#makeDark">Sign Up</a>
-</div>
+<header id="topBar" class="colorHeader">
+    <a id="headerLogo" class="link colorDarkLink colorTextLight" href="/">IU9-Forum</a>
+    <a id="headerUser" class=" link colorDarkLink colorTextLight" href="#makeDark">Sign Up</a>
+</header>
