--- a/views/layouts/postViewLayout.handlebars
+++ b/views/layouts/postViewLayout.handlebars
@@ -2,8 +2,8 @@
 {{>topbar}}
 <div class="container">
 
-    <div class="themes colorMain">
-        <h2 style="border-bottom-style:solid;" class="colorTextLight">Categories</h2>
+    <div id="categories" class="colorMain">
+        <h2 style="border-bottom-style:solid;" class="colorTextLight">Категории</h2>
         {{>categoriesListPanel}}
     </div>
 
