--- a/views/partials/postsListPanel.handlebars
+++ b/views/partials/postsListPanel.handlebars
@@ -1,10 +1,15 @@
 <!--href="/post/{{this.id}}"-->
 <div class="selectedTheme colorMain">
     <h2 class="categoryHeader colorTextLight">{{postsListTitle}}</h2>
+    <div class="colorTextLight">
+        <span><a href="?sortTag=byTime" class="sortLink">По времени</a></span>
+        <span><a href="?sortTag=byReplies" class="sortLink">По ответам</a></span>
+        <span>По последнему овтету</span></div>
+
     <ul id="ulPosts">
         {{#each posts}}
             <li class="answer colorSection">
-                <div class="profile" >
+                <div class="profile">
                     <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png"
                          alt="No avatar" height="100" width="100">
                     <div class="profileName link colorDarkLink">{{this.author_name}}</div>
@@ -14,7 +19,7 @@
                     <a href="/post/{{this.id}}"><input type="image"
                                                        class="replyImage vote colorDarkLink myButton colorSection"
                                                        src="/static/images/reply.png" alt="#"/></a>
-                    <div class="voteCounter colorMain colorTextLight">+3</div>
+                    <div class="voteCounter colorMain colorTextLight">{{this.reply_count}}</div>
                 </div>
             </li>
         {{/each}}
