postId, categoryId in requests validation, POST request optimized, post creation fail message added

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -285,3 +285,14 @@ li {
 .sortLink {
     text-decoration: none;
 }
+
+#message {
+    position: absolute;
+    width: 500px;
+    line-height: 100px;
+    background: hotpink;
+    text-align: center;
+
+    right: 0;
+    bottom: 0;
+}
