--- a/views/partials/postsListPanel.handlebars
+++ b/views/partials/postsListPanel.handlebars
@@ -24,5 +24,8 @@
             </li>
         {{/each}}
     </ul>
-    {{>newPost}}
+
+    {{#if categoryChosen}}
+        {{>newPost}}
+    {{/if}}
 </div>
