--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -11,3 +11,10 @@
     <a id="headerLogo" class="link colorDarkLink colorTextLight" href="/">IU9-Forum</a>
     <a id="headerUser" class=" link colorDarkLink colorTextLight" href="#makeDark">Sign Up</a>
 </header>
+
+
+{{#if postFail}}
+    <div id="message">
+        <p>Не удалось создать пост</p>
+    </div>
+{{/if}}
