--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -11,11 +11,11 @@ li {
 }
 
 
-#headerLogo {
+.headerLogo {
     float: left;
 }
 
-#headerUser {
+.headerUser {
     float: right;
 }
 
@@ -217,8 +217,6 @@ li {
 
 }
 
-
-
 .newAnswer {
     display: flex;
     flex-direction: row;
@@ -271,4 +269,28 @@ li {
 
 #makeDark:target {
     display: block;
+}
+
+.window {
+  background: rgba(87, 78, 63, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+.windowContent {
+  max-width: 15%;
+  max-height: 25%;
+  text-align: center;
+  padding: 1% 1% 1% 1%;
+  border-radius: 1vh;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
 }
