newpost, newreply connected w auth, show active user name, logout btn

--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -19,6 +19,10 @@
             </li>
         {{/each}}
     </ul>
+    {{#if user}}
+        {{>newAnswer}}
+    {{else}}
+        <p class="colorTextLight">Войдите или зарегистрируйтесь, чтобы ответить</p>
+    {{/if}}
 
-    {{>newAnswer}}
 </div>
