--- a/views/partials/newAnswer.handlebars
+++ b/views/partials/newAnswer.handlebars
@@ -2,7 +2,7 @@
     <div class="profile" style="margin-top: -2%; margin-left: 0%;">
         <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png" alt="No avatar"
              height="100" width="100">
-        <div class="link colorDarkLink colorTextLight" href="#">Nickname</div>
+        <div class="link colorDarkLink colorTextLight" href="#">{{user.username}}</div>
     </div>
     <form action="" method="post" id="answerForm">
         <textarea placeholder="Ваш ответ" name="myAnswer" id="myAnswer" required></textarea>
