--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -66,6 +66,9 @@ li {
     margin-bottom: 10%;
 }
 
+.colorTextDanger {
+    color: darkred !important;
+}
 .colorTextDark {
     color: #333333;
 }
@@ -319,4 +322,50 @@ li {
     bottom: 0;
     left: 0;
     margin: auto;
+}
+#profileTopBar {
+    position: relative;
+}
+#profileOptionsList {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 60px;
+    width: 200%;
+    padding: 10px 0;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+
+
+}
+
+#profileOptionsList a {
+    color: black;
+    text-decoration: none;
+    max-width: 100%;
+    height: 100%;
+    padding: 0 15px;
+    display: block;
+    transition: .2s;
+    transition-property: background-color, color;
+}
+#profileOptionsList > li {
+    font-size: 1rem;
+    line-height: 2;
+
+
+
+}
+
+#profileOptionsList a:hover {
+    background-color: dodgerblue;
+    color:white !important;
+}
+#profileOptionsList a:active {
+    background-color: lightcoral;
+}
+
+.hidden {
+    display: none !important;
 }
