--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -6,9 +6,20 @@
         {{#each replies}}
             <li class="answer colorSection" id="reply_{{this.id}}">
                 <div class="profile">
-                    <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png"
-                         alt="No avatar" height="100" width="100">
-                    <div class="profileName link colorDarkLink" href="#">{{this.author_name}}</div>
+                    <img
+                        {{#if this.author_name}}
+                        src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png"
+                        {{else}}
+                        src="https://avatars.mds.yandex.net/get-znatoki/1368855/2a0000016cc1fb6175fa439bc6ab108427ae/w480"
+                        {{/if}}
+                        alt="No avatar" height="100" width="100">
+                    <div class="profileName link colorDarkLink" href="#">
+                        {{#if this.author_name}}
+                            {{this.author_name}}
+                        {{else}}
+                            Удален
+                        {{/if}}
+                    </div>
                 </div>
                 <div class="answerText link ColorTextDark">{{this.text}}</div>
 
@@ -21,7 +32,7 @@
                     </form>
                     <div class="voteCounter">{{#if this.rating }}
                         {{#gt this.rating 0 }}
-                            <span style="color: darkgreen">{{this.rating}}</span>
+                            <span style="color: darkgreen   ">{{this.rating}}</span>
                         {{else}}
                             <span style="color: darkred">{{this.rating}}</span>
                         {{/gt}}
