--- a/views/partials/postsListPanel.handlebars
+++ b/views/partials/postsListPanel.handlebars
@@ -32,9 +32,19 @@
         {{#each posts}}
             <li class="answer colorSection">
                 <div class="profile">
-                    <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png"
-                         alt="No avatar" height="100" width="100">
-                    <div class="profileName link colorDarkLink">{{this.author_name}}</div>
+                    <img {{#if this.author_name}}
+                    src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png"
+                    {{else}}
+                    src="https://avatars.mds.yandex.net/get-znatoki/1368855/2a0000016cc1fb6175fa439bc6ab108427ae/w480"
+                    {{/if}}
+                    alt="No avatar" height="100" width="100">
+                    <div class="profileName link colorDarkLink">
+                        {{#if this.author_name}}
+                            {{this.author_name}}
+                        {{else}}
+                            Удален
+                        {{/if}}
+                    </div>
                 </div>
                 <a class="answerText link ColorTextDark" href="/post/{{this.id}}">{{this.title}}</a>
                 <div class="voteField">
