fixed profile options list width

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -334,13 +334,11 @@ li {
     position: absolute;
     right: 0;
     top: 60px;
-    width: 200%;
+    width: 200px;
     padding: 10px 0;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-
-
 }
 
 #profileOptionsList a {
