--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -373,3 +373,17 @@ li {
 .hidden {
     display: none !important;
 }
+
+.postCreationBox {
+    max-width: 50%;
+    max-height: 50%;
+    text-align: center;
+    padding: 1% 1% 1% 1%;
+    border-radius: 1vh;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+}
