--- a/views/partials/postsListPanel.handlebars
+++ b/views/partials/postsListPanel.handlebars
@@ -1,4 +1,12 @@
-<!--href="/post/{{this.id}}"-->
+<div id="postChange" class="window">
+    <form id="sendEdition" class="postCreationBox colorMain">
+        <div class="colorTextLight">Edit post</div>
+        <textarea name="edition" id="editPost" required></textarea>
+        <input type="submit" class="borderTop myButton colorDarkLink colorSection" type="image"
+               src="/static/images/send.png">
+    </form>
+</div>
+
 <div class="selectedTheme colorMain">
     <h2 class="categoryHeader colorTextLight">{{postsListTitle}}</h2>
     <div class="colorTextLight">
@@ -28,24 +36,46 @@
             {{/is}}
             class="sortLink">По последнему ответу</a></span></div>
 
-    <ul id="ulPosts">
-        {{#each posts}}
-            <li class="answer colorSection">
-                <div class="profile">
-                    <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png"
-                         alt="No avatar" height="100" width="100">
-                    <div class="profileName link colorDarkLink">{{this.author_name}}</div>
-                </div>
-                <a class="answerText link ColorTextDark" href="/post/{{this.id}}">{{this.title}}</a>
-                <div class="voteField">
-                    <a href="/post/{{this.id}}"><input type="image"
-                                                       class="replyImage vote colorDarkLink myButton colorSection"
-                                                       src="/static/images/reply.png" alt="#"/></a>
-                    <div class="voteCounter colorMain colorTextLight">{{this.reply_count}}</div>
-                </div>
-            </li>
-        {{/each}}
-    </ul>
+    {{#if userPostsChosen}}
+        <ul id="ulPosts">
+            {{#each posts}}
+                <li class="answer colorSection">
+                    <div class="profile">
+                        <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png"
+                             alt="No avatar" height="100" width="100">
+                        <a class="profileName link colorDarkLink" onclick="editPost({{this.id}}, {{this.category_id}}, '{{this.title}}')">Edit</a>
+                        <a class="profileName link colorDarkLink" onclick="deletePost({{this.id}})">Delete</a>
+                    </div>
+                    <a class="answerText link ColorTextDark" href="/post/{{this.id}}">{{this.title}}</a>
+                    <div class="voteField">
+                        <a href="/post/{{this.id}}"><input type="image"
+                                                           class="replyImage vote colorDarkLink myButton colorSection"
+                                                           src="/static/images/reply.png" alt="#"/></a>
+                        <div class="voteCounter colorMain colorTextLight">{{this.reply_count}}</div>
+                    </div>
+                </li>
+            {{/each}}
+        </ul>
+    {{else}}
+        <ul id="ulPosts">
+            {{#each posts}}
+                <li class="answer colorSection">
+                    <div class="profile">
+                        <img src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png"
+                             alt="No avatar" height="100" width="100">
+                        <div class="profileName link colorDarkLink">{{this.author_name}}</div>
+                    </div>
+                    <a class="answerText link ColorTextDark" href="/post/{{this.id}}">{{this.title}}</a>
+                    <div class="voteField">
+                        <a href="/post/{{this.id}}"><input type="image"
+                                                           class="replyImage vote colorDarkLink myButton colorSection"
+                                                           src="/static/images/reply.png" alt="#"/></a>
+                        <div class="voteCounter colorMain colorTextLight">{{this.reply_count}}</div>
+                    </div>
+                </li>
+            {{/each}}
+        </ul>
+    {{/if}}
 
     {{#if user}}
         {{#if categoryChosen}}
@@ -55,3 +85,56 @@
         <p class="colorTextLight">Войдите или зарегистрируйтесь, чтобы создать пост</p>
     {{/if}}
 </div>
+<script>
+    let box1 = document.getElementById('logInForm'), box2 = document.getElementById('signUpForm'), box3 = document.getElementById('postCreation'), box4 = document.getElementById('postChange');
+    window.onclick = function (event) {
+        if (event.target === box1) {
+            box1.style.display = 'none';
+        } else if (event.target === box2) {
+            box2.style.display = 'none';
+        } else if (event.target === box3) {
+            box3.style.display = 'none';
+        } else if (event.target === box4) {
+            box4.style.display = 'none';
+        }
+    }
+    const deletePost = (id) => {
+        let post = {
+            id: id
+        };
+        fetch('/category/delete', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json;charset=utf-8'
+            },
+            body: JSON.stringify(post)
+        }).then( () => {
+            location.reload();
+        });
+    }
+    const editPost = (id, category, text) => {
+        document.getElementById('postChange').style.display='block';
+        document.getElementById('editPost').value = text;
+        document.getElementById('sendEdition').onsubmit = async (e) => {
+            e.preventDefault();
+            let post = {
+                id: id,
+                category: category,
+                text: document.getElementById('sendEdition').edition.value
+            }
+            fetch('/category/edit', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json;charset=utf-8'
+                },
+                body: JSON.stringify(post)
+            }).then( (res) => {
+                if (res.ok) {
+                    location.reload();
+                } else {
+                    location.href = '/category/myPosts?postFail=true`';
+                }
+            });
+        };
+    }
+</script>
